updating jupyter notebooks

--- a/iPythonNotebooks/PATRIC to FBA.ipynb
+++ b/iPythonNotebooks/PATRIC to FBA.ipynb
@@ -75,7 +75,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 2361 unique roles in this genome\n"
+      "There are 2362 unique roles in this genome\n"
      ]
     }
    ],
@@ -100,7 +100,24 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "We are logging to /home/redwards/GitHubs/PyFBA/iPythonNotebooks/PyFBA.2021-05-26T23:27:55.521214.log\n",
+      "Warning: Fe3 is deprecated. Please use Fe+2 for the name in compound aerobactin minus Fe3\n",
+      "Warning: Fe3 is deprecated. Please use Fe+2 for the name in compound Fe3S4\n",
+      "Warning: Fe3 is deprecated. Please use Fe+2 for the name in compound Fe3S3\n",
+      "Warning: Fe2 is deprecated. Please use Fe+2 for the name in compound Rieske Fe2S2 iron-sulfur cluster\n",
+      "Warning: Fe2 is deprecated. Please use Fe+2 for the name in compound [Fe2(Cit2)]2-\n",
+      "Warning: Fe2 is deprecated. Please use Fe+2 for the name in compound Fe2-siderophores\n",
+      "Warning: Fe2 is deprecated. Please use Fe+2 for the name in compound CD-SP-2Fe2S-Complex\n",
+      "Warning: Fe2 is deprecated. Please use Fe+2 for the name in compound Co-chaperone-SP-2Fe2S-Complex\n",
+      "Warning: Fe2 is deprecated. Please use Fe+2 for the name in compound Chap-ATP-Co-chaperone-SP-2Fe2S-Complex\n"
+     ]
+    }
+   ],
    "source": [
     "roles_to_reactions = PyFBA.filters.roles_to_reactions(roles, organism_type=\"Gram_Negative\", verbose=False)"
    ]
@@ -137,7 +154,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "There are 6359 unique reactions associated with this genome\n"
+      "There are 6212 unique reactions associated with this genome\n"
      ]
     }
    ],
@@ -163,12 +180,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are 33,992 compounds, 43,956 reactions, and 9,423 enzymes in total\n"
+     ]
+    }
+   ],
    "source": [
     "compounds, reactions, enzymes = \\\n",
-    "    PyFBA.parse.model_seed.compounds_reactions_enzymes('gramnegative')"
+    "    PyFBA.parse.model_seed.compounds_reactions_enzymes('gramnegative')\n",
+    "print(f\"There are {len(compounds):,} compounds, {len(reactions):,} reactions, and {len(enzymes):,} enzymes in total\")"
    ]
   },
   {
@@ -217,6 +243,14 @@
      "text": [
       "Our media has 65 components\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: Fe2 is deprecated. Please use Fe+2 for the name in compound Fe2+\n",
+      "Warning: Fe3 is deprecated. Please use Fe+2 for the name in compound fe3\n"
+     ]
     }
    ],
    "source": [
@@ -237,7 +271,16 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Warning: Fe2 is deprecated. Please use Fe+2 for the name in compound Fe2+\n",
+      "Warning: Fe3 is deprecated. Please use Fe+2 for the name in compound fe3\n"
+     ]
+    }
+   ],
    "source": [
     "biomass_equation = PyFBA.metabolism.biomass_equation('gramnegative')"
    ]
@@ -285,21 +328,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "added_reactions = []\n",
     "original_reactions_to_run = copy.copy(reactions_to_run)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reactions_to_run = copy.copy(original_reactions_to_run)"
    ]
   },
   {
@@ -313,19 +347,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before adding media reactions, we had 6212 reactions.\n",
+      "Before adding media reactions, we had 6212 reactions.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Compound Fe2+ does not exist in the compound database\n",
+      "Found fe3 as an alias. Added Fe+3 and reactions set()\n"
+     ]
+    }
+   ],
    "source": [
-    "media_reactions = PyFBA.gapfill.suggest_from_media(compounds, reactions,\n",
-    "                                                   reactions_to_run, media)\n",
-    "added_reactions.append((\"media\", media_reactions))\n",
-    "reactions_to_run.update(media_reactions)"
+    "update_type = 'media'\n",
+    "new_reactions = PyFBA.gapfill.suggest_from_media(compounds, reactions,\n",
+    "                                                   reactions_to_run, media, verbose=True)\n",
+    "added_reactions.append((update_type, new_reactions))\n",
+    "\n",
+    "print(f\"Before adding {update_type} reactions, we had {len(reactions_to_run)} reactions.\")\n",
+    "reactions_to_run.update(new_reactions)\n",
+    "print(f\"Before adding {update_type} reactions, we had {len(reactions_to_run)} reactions.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -353,18 +408,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before adding essential reactions, we had 6212 reactions.\n",
+      "Before adding essential reactions, we had 6281 reactions.\n"
+     ]
+    }
+   ],
    "source": [
-    "essential_reactions = PyFBA.gapfill.suggest_essential_reactions()\n",
-    "added_reactions.append((\"essential\", essential_reactions))\n",
-    "reactions_to_run.update(essential_reactions)"
+    "update_type = 'essential'\n",
+    "new_reactions = PyFBA.gapfill.suggest_essential_reactions()\n",
+    "added_reactions.append((update_type, new_reactions))\n",
+    "print(f\"Before adding {update_type} reactions, we had {len(reactions_to_run)} reactions.\")\n",
+    "reactions_to_run.update(new_reactions)\n",
+    "print(f\"Before adding {update_type} reactions, we had {len(reactions_to_run)} reactions.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -392,29 +459,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "FATAL: The subsystems file /home/redwards/GitHubs/PyFBA/PyFBA/Biochemistry/SEED/Subsystems/SS_functions.txt does not exist from working directory /home/redwards/GitHubs/PyFBA/iPythonNotebooks. Please provide a path to that file\n"
+      "Before adding subsystems reactions, we had 6281 reactions.\n",
+      "Before adding subsystems reactions, we had 6729 reactions.\n"
      ]
     }
    ],
    "source": [
-    "subsystem_reactions = \\\n",
+    "update_type = 'subsystems'\n",
+    "new_reactions = \\\n",
     "    PyFBA.gapfill.suggest_reactions_from_subsystems(reactions,\n",
     "                                                    reactions_to_run,\n",
     "                                                    threshold=0.5)\n",
-    "added_reactions.append((\"subsystems\", subsystem_reactions))\n",
-    "reactions_to_run.update(subsystem_reactions)"
+    "added_reactions.append((update_type, new_reactions))\n",
+    "print(f\"Before adding {update_type} reactions, we had {len(reactions_to_run)} reactions.\")\n",
+    "reactions_to_run.update(new_reactions)\n",
+    "print(f\"Before adding {update_type} reactions, we had {len(reactions_to_run)} reactions.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -433,14 +504,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Pre orphan has 6431 reactions\n"
+      "Pre orphan has 6729 reactions\n"
      ]
     }
    ],
@@ -451,20 +522,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reactions_to_run=copy.copy(pre_orphan)\n",
-    "added_reactions = copy.copy(pre_o_added)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###Orphan compounds\n",
+    "### Orphan compounds\n",
     "\n",
     "Orphan compounds are those compounds which are only associated with one reaction. They are either produced, or trying to be consumed. We need to add reaction(s) that complete the network of those compounds.\n",
     "\n",
@@ -473,29 +534,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Post orphan has 6431 reactions\n"
+      "Before adding orphan compounds reactions, we had 6729 reactions.\n",
+      "Before adding orphan compounds reactions, we had 6729 reactions.\n"
      ]
     }
    ],
    "source": [
-    "orphan_reactions = PyFBA.gapfill.suggest_by_compound(compounds, reactions,\n",
+    "update_type = 'orphan compounds'\n",
+    "new_reactions = PyFBA.gapfill.suggest_by_compound(compounds, reactions,\n",
     "                                                     reactions_to_run,\n",
     "                                                     max_reactions=1)\n",
-    "added_reactions.append((\"orphans\", orphan_reactions))\n",
-    "reactions_to_run.update(orphan_reactions)\n",
-    "print(\"Post orphan has {} reactions\".format(len(reactions_to_run)))"
+    "added_reactions.append((update_type, new_reactions))\n",
+    "print(f\"Before adding {update_type} reactions, we had {len(reactions_to_run)} reactions.\")\n",
+    "reactions_to_run.update(new_reactions)\n",
+    "print(f\"Before adding {update_type} reactions, we had {len(reactions_to_run)} reactions.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -522,14 +586,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Testing reactions from orphans\n"
+      "Testing reactions from orphan compounds\n"
      ]
     },
     {
@@ -539,7 +603,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-23-62c513d2ac47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m# Use minimization function to determine the minimal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;31m# set of gap-filled reactions from the current method\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     new_essential = PyFBA.gapfill.minimize_additional_reactions(ori, new, compounds,\n\u001b[0m\u001b[1;32m     19\u001b[0m                                                                 \u001b[0mreactions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmedia\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m                                                                 biomass_equation)\n",
+      "\u001b[0;32m<ipython-input-21-62c513d2ac47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     16\u001b[0m     \u001b[0;31m# Use minimization function to determine the minimal\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;31m# set of gap-filled reactions from the current method\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m     new_essential = PyFBA.gapfill.minimize_additional_reactions(ori, new, compounds,\n\u001b[0m\u001b[1;32m     19\u001b[0m                                                                 \u001b[0mreactions\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmedia\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m                                                                 biomass_equation)\n",
       "\u001b[0;32m~/GitHubs/PyFBA/PyFBA/gapfill/reaction_minimization.py\u001b[0m in \u001b[0;36mminimize_additional_reactions\u001b[0;34m(base_reactions, optional_reactions, compounds, reactions, media, biomass_eqn, verbose)\u001b[0m\n\u001b[1;32m    149\u001b[0m                                               biomass_eqn)\n\u001b[1;32m    150\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mgrowth\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 151\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"'base' union 'optional' reactions does not generate growth. We can not bisect the set\\n\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    152\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    153\u001b[0m     \u001b[0;31m# first, lets see if we can limit the reactions based on compounds present and still get growth\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
       "\u001b[0;31mException\u001b[0m: 'base' union 'optional' reactions does not generate growth. We can not bisect the set\n"
      ]
