--- a/iPythonNotebooks/PATRIC to FBA.ipynb
+++ b/iPythonNotebooks/PATRIC to FBA.ipynb
@@ -22,7 +22,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "We are using /home/redwards/GitHubs/PyFBA/PyFBA/Biochemistry/ModelSEEDDatabase/ for our data\n"
+      "Please ensure that you install the Model SEED Database somewhere, and set the environment variable ModelSEEDDatabase to point to that directory.\n",
+      " See INSTALLATION.md for more information\n"
+     ]
+    },
+    {
+     "ename": "SystemExit",
+     "evalue": "-1",
+     "output_type": "error",
+     "traceback": [
+      "An exception has occurred, use %tb to see the full traceback.\n",
+      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m -1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/redwards/GitHubsLinux/PyFBA/venv/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3449: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
+      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
      ]
     }
    ],
@@ -658,9 +676,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "venv",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -672,7 +690,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
